--- a/README.rdoc
+++ b/README.rdoc
@@ -1,27 +1,15 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
+Little app that show the using of postgis postgresql extention to find items on geom and geograph shapes, also makes use if google API for displaying and obtaining data.
 
 * Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
+  2.3.0
 
 * How to run the test suite
+spec
 
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+* Demo
+https://photo-book.herokuapp.com/
 
 
 Please feel free to use a different markup language if you do not plan to run
